chore: fix proxy.xroad-tls-ciphers mapping to new props
Refs: XRDDEV-3031